# cpp_serdes

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TEST_SERDES
.github/workflows/: cmake.yml
include/: serializer_deserializer.hpp
src/: test.cpp
